# monoprior

./: .gitignore  .pixi.sh  README.md  pixi.toml  pyproject.toml
monopriors/: __init__.py  data.py  depth_fuser.py  depth_models.py  depth_utils.py  monoprior.py  monoprior_models.py  normal_models.py  rr_logging_utils.py
monopriors/apis/: polycam_inference.py  promptda_polycam.py  promptda_sanity_check.py  promptda_stray.py
monopriors/data/: nerfstudio_data.py  polycam_data.py  sdfstudio_data.py
monopriors/depth_completion_models/: base_completion_depth.py  prompt_da.py
monopriors/dsine/: dsine.py  dsine_kappa.py  submodules.py
monopriors/gradio_ui/: depth_compare_ui.py  depth_inference_ui.py
monopriors/metric_depth_models/: __init__.py  base_metric_depth.py  metric3d.py  unidepth.py
monopriors/relative_depth_models/: __init__.py  base_depth.py  base_relative_depth.py  depth_anything_v1.py  depth_anything_v2.py  metric3d_relative.py  unidepth.py
monopriors/surface_normal_models/: __init__.py  base_normal_model.py  dsine_model.py  omni_normal_model.py
notebooks/: depthanythingv1.ipynb  o3d_rgbd_integration.ipynb
tools/: app.py  compare_normals.py  depth_rr.py  gradio_app.py  inference_polycam.py  nerfstudio_to_sdfstudio.py  promptda_polycam.py  promptda_sanitycheck.py  run_depth.py  run_relative_depth.py  upload_to_hf.py  view_sdfstudio.py
